--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, sans-serif;
   font-size: 10px;
 }
 
@@ -22,51 +22,14 @@ body {
 
 .calculator {
   width: 720px;
+  height: 480px;
   display: flex;
   align-items: stretch;
   justify-content: space-between;
   gap: 10px;
 }
-.calculator-wrapper {
-  flex-shrink: 0;
-  max-width: 500px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  gap: 10px;
-}
-.calculator-display {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  flex-direction: column;
-  width: 100%;
-  min-height: 120px;
-  max-height: 200px;
-  padding: 10px 20px;
-  text-align: right;
-  word-wrap: break-word;
-  word-break: break-all;
-  border: 2px solid rgb(225, 225, 225);
-  border-radius: 10px;
-}
-.calculator-display__previous-operand {
-  font-size: 1.5em;
-  color: rgb(146, 146, 146);
-}
-.calculator-display__current-operand {
-  font-size: 3em;
-  color: rgb(255, 255, 255);
-}
-.calculator-buttons {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 3px;
-}
 .calculator__button {
-  flex: 1 1 calc(25% - 3px);
+  flex: 1 1 calc(25% - 5px);
   cursor: pointer;
   padding: 20px 30px;
   font-size: 2.2em;
@@ -80,6 +43,9 @@ body {
 .calculator__button_operator:hover {
   background-color: rgb(60, 60, 60);
 }
+.calculator__button_operator:active {
+  color: rgb(208, 208, 208);
+}
 .calculator__button_number {
   background-color: rgb(59, 59, 59);
   color: rgb(225, 225, 225);
@@ -87,13 +53,127 @@ body {
 .calculator__button_number:hover {
   background-color: rgb(50, 50, 50);
 }
+.calculator__button_number:active {
+  color: rgb(208, 208, 208);
+  background-color: rgb(40, 40, 40);
+}
 .calculator__button_equals {
   background-color: rgb(97, 204, 255);
-  color: rgb(225, 225, 225);
+  color: #000;
 }
 .calculator__button_equals:hover {
   background-color: rgb(90, 186, 232);
 }
 .calculator__button_equals:active {
+  color: rgb(41, 84, 105);
   background-color: rgb(83, 169, 210);
+}
+
+.calculator-wrapper {
+  flex-shrink: 0;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.calculator-display {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 100%;
+  min-height: 120px;
+  max-height: 150px;
+  padding: 10px 20px;
+  text-align: right;
+  word-wrap: break-word;
+  word-break: break-all;
+  border: 2px solid rgb(225, 225, 225);
+  border-radius: 10px;
+}
+.calculator-display__previous-operand {
+  font-size: 2em;
+  color: rgb(146, 146, 146);
+}
+.calculator-display__current-operand {
+  font-size: 4em;
+  color: rgb(255, 255, 255);
+}
+
+.calculator-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 5px;
+}
+
+.calculator-history {
+  width: 100%;
+  border: 2px solid rgb(225, 225, 225);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.calculator-history__list {
+  width: 100%;
+  list-style: none;
+  padding: 10px;
+  margin: 10px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 10px;
+  overflow-y: auto;
+}
+.calculator-history__item {
+  cursor: pointer;
+  width: 100%;
+  text-align: right;
+  color: rgb(255, 255, 255);
+  padding: 5px;
+  border-radius: 5px;
+  transition: background-color 0.1s ease;
+}
+.calculator-history__item:hover {
+  background-color: rgb(50, 50, 50);
+}
+.calculator-history__item:active {
+  transform: scale(0.95);
+}
+.calculator-history__item__previous-operand {
+  font-size: 1em;
+  color: rgb(146, 146, 146);
+}
+.calculator-history__item__current-operand {
+  font-size: 1.5em;
+  color: rgb(255, 255, 255);
+}
+.calculator-history__bottom {
+  width: 100%;
+  height: 30px;
+  padding: 10px;
+  margin-bottom: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.calculator-history__clear {
+  cursor: pointer;
+  font-size: 1.5em;
+  border: none;
+  background-color: rgb(32, 32, 32);
+  color: rgb(225, 225, 225);
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.2s ease-out;
+  border-radius: 3px;
+}
+.calculator-history__clear:hover {
+  background-color: rgb(50, 50, 50);
 }/*# sourceMappingURL=style.css.map */
