--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,23 +1,4 @@
-$color-background-dark: rgb(32, 32, 32);
-
-$color-button-operator-dark: rgb(50, 50, 50);
-$color-button-operator-hover-dark: rgb(60, 60, 60);
-
-$color-button-numbers-dark: rgb(59, 59, 59);
-$color-button-numbers-hover-dark: rgb(50, 50, 50);
-$color-button-active-hover-dark: rgb(40, 40, 40);
-
-$color-button-equals-dark: rgb(97, 204, 255);
-$color-button-equals-hover-dark: rgb(90, 186, 232);
-$color-button-equals-active-dark: rgb(83, 169, 210);
-
-$color-text-button-dark: rgb(225, 225, 225);
-$color-text-button-active-dark: rgb(208, 208, 208);
-
-$color-text-previous-dark: rgb(146, 146, 146);
-$color-text-current-dark: rgb(255, 255, 255);
-
-$buttons-gap: 3px;
+@import "_vars.scss";
 
 *,
 *::before,
@@ -26,7 +7,7 @@ $buttons-gap: 3px;
 }
 
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', Arial, sans-serif;
   font-size: 10px;
 }
 
@@ -43,72 +24,18 @@ body {
   background-color: $color-background-dark;
 }
 
-
 .calculator {
   width: 720px;
+  height: 480px;
 
   display: flex;
   align-items: stretch;
   justify-content: space-between;
   gap: 10px;
 
-  &-wrapper {
-    flex-shrink: 0;
-
-    max-width: 500px;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-
-    gap: 10px;
-  }
-
-  &-display {
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    flex-direction: column;
-
-    width: 100%;
-    min-height: 120px;
-    max-height: 200px;
-
-    padding: 10px 20px;
-
-    text-align: right;
-    word-wrap: break-word;
-    word-break: break-all;
-
-    border: 2px solid $color-text-button-dark;
-    // border-radius: 10px 10px 0 0;
-    border-radius: 10px;
-
-    &__previous-operand {
-      font-size: 1.5em;
-      color: $color-text-previous-dark;
-    }
-
-    &__current-operand {
-      font-size: 3em;
-      color: $color-text-current-dark;
-    }
-  }
-
-  &-buttons {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-    gap: $buttons-gap;
-  }
-
   &__button {
     flex: 1 1 calc(25% - $buttons-gap);
-
     cursor: pointer;
-
     padding: 20px 30px;
 
     font-size: 2.2em;
@@ -123,6 +50,10 @@ body {
         background-color: $color-button-operator-hover-dark;
       }
 
+      &:active {
+        color: $color-text-button-active-dark;
+      }
+
     }
 
     &_number {
@@ -132,19 +63,165 @@ body {
       &:hover {
         background-color: $color-button-numbers-hover-dark;
       }
+
+      &:active {
+        color: $color-text-button-active-dark;
+        background-color: $color-button-active-hover-dark;
+      }
     }
 
     &_equals {
       background-color: $color-button-equals-dark;
-      color: $color-text-button-dark;
+      color: $color-text-button-equals-dark;
 
       &:hover {
         background-color: $color-button-equals-hover-dark;
       }
 
       &:active {
+        color: $color-text-button-equals-active-dark;
         background-color: $color-button-equals-active-dark;
       }
+    }
+  }
+}
+
+.calculator-wrapper {
+  flex-shrink: 0;
+
+  max-width: 500px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  gap: 10px;
+}
+
+.calculator-display {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  flex-direction: column;
+
+  width: 100%;
+  min-height: 120px;
+  max-height: 150px;
+
+  padding: 10px 20px;
+
+  text-align: right;
+  word-wrap: break-word;
+  word-break: break-all;
+
+  border: 2px solid $color-text-button-dark;
+  border-radius: 10px;
+
+  &__previous-operand {
+    font-size: 2em;
+    color: $color-text-previous-dark;
+  }
+
+  &__current-operand {
+    font-size: 4em;
+    color: $color-text-current-dark;
+  }
+}
+
+.calculator-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  gap: $buttons-gap;
+}
+
+.calculator-history {
+  width: 100%;
+  border: 2px solid $color-text-button-dark;
+  border-radius: 10px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  &__list {
+    width: 100%;
+
+    list-style: none;
+
+    padding: 10px;
+    margin: 10px 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 10px;
+
+    overflow-y: auto;
+  }
+
+  &__item {
+    cursor: pointer;
+    width: 100%;
+    text-align: right;
+    color: $color-text-current-dark;
+    padding: 5px;
+
+    border-radius: 5px;
+
+    transition: background-color 0.1s ease;
+
+    &:hover {
+      background-color: $color-button-operator-dark;
+    }
+
+    &:active {
+      transform: scale(0.95);
+    }
+
+    &__previous-operand {
+      font-size: 1em;
+      color: $color-text-previous-dark;
+    }
+
+    &__current-operand {
+      font-size: 1.5em;
+      color: $color-text-current-dark;
+    }
+  }
+
+  &__bottom {
+    width: 100%;
+    height: 30px;
+
+    padding: 10px;
+    margin-bottom: 5px;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  &__clear {
+    cursor: pointer;
+
+    font-size: 1.5em;
+    border: none;
+    background-color: $color-background-dark;
+    color: $color-text-button-dark;
+
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: background-color 0.2s ease-out;
+    border-radius: 3px;
+
+    &:hover {
+      background-color: $color-button-operator-dark;
     }
   }
 }
