--- a/styles/style.css
+++ b/styles/style.css
@@ -136,7 +136,9 @@ body {
   color: rgb(255, 255, 255);
   padding: 5px;
   border-radius: 5px;
-  transition: background-color 0.1s ease;
+  transition-property: background-color, transform;
+  transition-duration: 0.1s;
+  transition-timing-function: ease;
 }
 .calculator-history__item:hover {
   background-color: rgb(50, 50, 50);
