--- a/styles/style.scss
+++ b/styles/style.scss
@@ -171,7 +171,9 @@ body {
 
     border-radius: 5px;
 
-    transition: background-color 0.1s ease;
+    transition-property: background-color, transform;
+    transition-duration:  0.1s;
+    transition-timing-function:  ease;
 
     &:hover {
       background-color: $color-button-operator-dark;
