feat: add adaptive layout for 320, 576, 768

--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -21,3 +21,7 @@ $color-text-previous-dark: rgb(146, 146, 146);
 $color-text-current-dark: rgb(255, 255, 255);
 
 $buttons-gap: 5px;
+
+$screen-md : 768px;
+$screen-sm: 576px;
+$screen-xs: 320px;
