--- a/styles/style.css
+++ b/styles/style.css
@@ -20,13 +20,38 @@ body {
   background-color: rgb(32, 32, 32);
 }
 
+.container {
+  min-width: 320px;
+}
+
 .calculator {
-  width: 720px;
-  height: 480px;
+  width: 320px;
+  max-height: 500px;
   display: flex;
+  flex-direction: column;
   align-items: stretch;
   justify-content: space-between;
   gap: 10px;
+  padding: 10px;
+}
+@media screen and (min-width: 320px) and (max-width: 575px) {
+  .calculator {
+    width: 320px;
+    max-height: 100vh;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 767px) {
+  .calculator {
+    width: 540px;
+    flex-direction: row;
+    max-height: 400px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .calculator {
+    width: 720px;
+    flex-direction: row;
+  }
 }
 .calculator__button {
   flex: 1 1 calc(25% - 5px);
@@ -35,6 +60,11 @@ body {
   font-size: 2.2em;
   border: none;
   border-radius: 4px;
+}
+@media screen and (max-width: 768px) {
+  .calculator__button {
+    padding: 10px;
+  }
 }
 .calculator__button_operator {
   background-color: rgb(50, 50, 50);
@@ -78,6 +108,16 @@ body {
   justify-content: space-between;
   gap: 10px;
 }
+@media screen and (min-width: 576px) {
+  .calculator-wrapper {
+    max-width: 320px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .calculator-wrapper {
+    max-width: 500px;
+  }
+}
 
 .calculator-display {
   display: flex;
@@ -112,11 +152,17 @@ body {
 
 .calculator-history {
   width: 100%;
+  min-width: 200px;
   border: 2px solid rgb(225, 225, 225);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+@media screen and (max-width: 575px) {
+  .calculator-history {
+    max-height: 200px;
+  }
 }
 .calculator-history__list {
   width: 100%;
